--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "storybook": "start-storybook",
-    "deploy-storybook": "storybook-to-ghpages --out=docs",
+    "build-storybook": "build-storybook -c .storybook -o docs",
     "watch": "node-sass --watch app/scss -o app/assets"
   },
   "author": "",
@@ -13,8 +13,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@storybook/addon-a11y": "^5.3.13",
+    "@storybook/addon-storysource": "^5.3.13",
     "@storybook/html": "^5.3.13",
-    "@storybook/storybook-deployer": "^2.8.2",
     "babel-loader": "^8.0.6",
     "node-sass": "^4.13.1"
   }
